--- a/cctv.html
+++ b/cctv.html
@@ -108,6 +108,8 @@
         {"dept_id":null,"camera_id":"41","dept_pims_id":"10018","dept_name":"ตาก จุดที่ 1","dept_approve":null,"accuse_code":null,"accuse_name":null,"dept_webservice":null,"dept_status":"Lost","dept_last_date":"22/08/2562","dept_last_datetime":"22/08/2562 09:58:49","total":"436","remark":"","crr_dept_id":null,"image_bg":"img/10018/20190822/41_1001811900058681_2.jpg","remark_order":"","remark_img":"","remark_warning":""},
         {"dept_id":null,"camera_id":"42","dept_pims_id":"10018","dept_name":"ตาก จุดที่ 2","dept_approve":null,"accuse_code":null,"accuse_name":null,"dept_webservice":null,"dept_status":"Lost","dept_last_date":"22/08/2562","dept_last_datetime":"22/08/2562 10:00:07","total":"476","remark":"","crr_dept_id":null,"image_bg":"img/10018/20190822/42_1001821900060483_2.jpg","remark_order":"","remark_img":"","remark_warning":""}];
 
+	listTable('6,12');    
+	
         function listTable(v) {
             let tbody = '<table style="width: 100%"><tbody>';
             let p = 0;
