--- a/cctv.html
+++ b/cctv.html
@@ -38,6 +38,11 @@
         bottom: 35%;
         margin: 0;
         padding: 2px;
+	text-shadow:
+            -1px -1px 0 #000,
+            1px -1px 0 #000,
+            -1px 1px 0 #000,
+            1px 1px 0 #000;
     }
     .card-img-overlay p {
         margin-bottom: 0;
