--- a/index.html
+++ b/index.html
@@ -4,38 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Sass Demo</title>
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <div id="bg"></div>
 
     <header>
-        <a href="#">RadBot</a>
+        <a href="#">SASS</a>
     </header>
 
     <main>
         <section id="card">
             <ul>
                 <li>
-                    <span></span>
-                    <strong>How are you today?</strong>
+                    <span class="active"></span>
+                    <strong>sass-demo-1 (Current)</strong>
                 </li>
                 <li>
-                    <span></span>
-                    <strong>Is something I can help you with?</strong>
-                </li>
-                <li>
-                    <span></span>
-                    <strong>Will I can save your day?</strong>
+                    <a href="cool.html">
+                        <span></span>
+                        <strong>Is something I can help you with?</strong>
+                    </a>
                 </li>
             </ul>
         </section>
         <section id="primary">
-            <h1>New Personal Assistant</h1>
-            <p>It will save your day a lot of thing than before.</p>
+            <h1>SASS Demo Home</h1>
+            <p>Just some prototyping. nothing more.</p>
 
-            <a href="#">Get it now!</a>
+            <a href="https://lzy3me.github.io/">go to Lzy3me Page</a>
         </section>
     </main>
 </body>
